src/objects/Resource_Hold__c.object
<CustomObject>
    <description>Used to indicate on a resource request that a specific person will likely be on this event.</description>
    <fields>
        <fullName>Coverage_Area__c</fullName>
        <label>Coverage Area</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence for InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Managment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shadow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <label>Resource Request</label>
        <referenceTo>ResourceRequest__c</referenceTo>
        <relationshipLabel>Resource Holds</relationshipLabel>
        <relationshipName>Resource_Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource Hold</label>
    <nameField>
        <label>Resource Hold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>